FullQa New/src/objects/Opportunity_Connector_Splits__c.object
<CustomObject>
    <fields>
        <fullName>Booked_Amount__c</fullName>
        <formula>IF( Opportunity__r.Platform_Fee_Count__c = 1, Opportunity__r.BookedValue__c, Percent__c *  Opportunity__r.BookedValue__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booked Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Connector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Connector</label>
        <referenceTo>Connector__c</referenceTo>
        <relationshipLabel>Opportunity Connector Splits</relationshipLabel>
        <relationshipName>Opportunity_Connector_Splits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Connector Splits</relationshipLabel>
        <relationshipName>Opportunity_Connector_Splits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Percent__c</fullName>
        <formula>IF( Opportunity__r.Platform_Fee_Count__c = 1, 1, IF(Opportunity__r.Total_Platform_Charges__c = 0, 0, Sales_Price__c /  Opportunity__r.Total_Platform_Charges__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Price__c</fullName>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Opportunity Connector Split</label>
    <nameField>
        <displayFormat>ocs{0000}</displayFormat>
        <label>Opportunity Connector Splits Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Connector Splits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>